# beat_this

./: .gitignore  CHANGELOG.md  LICENSE  README.md  beat_this_example.ipynb  clean_checkpoints.py  data_diff.ipynb  hubconf.py  pyproject.toml  refactoring_plan.md  requirements.txt  setup.py  test_output.beat
.github/workflows/: pypi.yml
beat_this/: cli.py  inference.py  postprocessing_interface.py  preprocessing.py  utils.py
beat_this/dataset/: __init__.py  augment.py  dataset.py  mmnpz.py
beat_this/model/: beat_tracker.py  loss.py  madmom_postprocessor.py  pl_module.py  postprocessor.py  roformer.py
beat_this/preprocessing/: preprocess_audio.py
launch_scripts/: clean_checkpoints.py  compute_paper_metrics.py  final_runs.sh  predict.py  preprocess_audio.py  train.py
tests/: test_cli.py  test_inference.py  test_launch_scripts.py  test_pl_module.py  test_postprocessing_interface.py  test_postprocessors.py
