[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beat-this"
version = "0.1"
description = "Beat This! beat tracker"
readme = "README.md"
authors = [{ name = "Francesco Foscarin" }, { name = "Jan Schlüter" }]
license = { text = "MIT" }
requires-python = ">=3"
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "einops>=0.8.0",
    "rotary-embedding-torch>=0.6.4",
    "soxr>=0.3.7",
    "tqdm>=4.66.4",
]

[project.urls]
Homepage = "https://github.com/CPJKU/beat_this"

[project.scripts]
beat_this = "beat_this.cli:main"
