[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beat-this"
version = "0.1"
description = "Beat This! beat tracker"
readme = "README.md"
authors = [{ name = "Francesco Foscarin" }, { name = "Jan Schlüter" }]
license = { text = "MIT" }
requires-python = ">=3"
dependencies = [
    "numpy",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "einops",
    "rotary-embedding-torch",
    "sox",
    "tqdm",
    "huggingface-hub",
]

[project.urls]
Homepage = "https://github.com/CPJKU/beat_this"

[project.scripts]
beat_this = "beat_this.cli:main"
